--- a/templates/course_syllabus.mustache
+++ b/templates/course_syllabus.mustache
@@ -74,7 +74,7 @@
         {{$title}}{{#str}}syllabuspage:competencies, local_envasyllabus{{/str}}{{/title}}
         {{$content}}
             {{#competencies}}
-                <div class="d-flex">
+                <div class="d-flex competency-inner-container">
                     <div>
                         {{{graph}}}
                     </div>
