Fix issues with cache and filter
* Add a loading icon while waiting for the results
* Fix issue with year filter
* Add unit tests

--- a/templates/catalog.mustache
+++ b/templates/catalog.mustache
@@ -37,6 +37,12 @@
     </div>
     <div data-region="catalog-view-content" id="catalog-content-{{uniqid}}">
         <div class="catalog-courses" data-category-root-id="{{categoryrootid}}" {{#currentlang}}data-current-lang="{{.}}"{{/currentlang}}>
+            <div class="card-deck dashboard-card-deck one-row overflow-hidden" style="height: 26.05rem">
+                {{> core_course/placeholder-course }}
+                {{> core_course/placeholder-course }}
+                {{> core_course/placeholder-course }}
+                {{> core_course/placeholder-course }}
+            </div>
         </div>
     </div>
 </div>
