--- a/templates/catalog_course.mustache
+++ b/templates/catalog_course.mustache
@@ -24,6 +24,10 @@
         "nocoursesimg": "https://moodlesite/theme/image.php/boost/block_myoverview/1535727318/courses",
         "grouping": "all",
         "sort": "fullname",
+        "sortdirection": "ASC",
+        "categoryrootid": 1,
+        "categoryid": 1,
+        "currentlang": "en"
     }
 }}
 <div class="local-envasyllabus-catalog-course col-3 span3 course-outer-card">
