--- a/templates/course_syllabus_collapsible.mustache
+++ b/templates/course_syllabus_collapsible.mustache
@@ -15,7 +15,7 @@
    along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
  }}
 {{!
-  @local_envasyllabus/course_syllabus_collapsible
+  @template local_envasyllabus/course_syllabus_collapsible
 
   Syllabus templated
 
@@ -29,7 +29,10 @@
 
   Example context (json):
   {
-
+    "id": "teachers-5c6b6b6b6b6b6b6b6b6b6b6b6b6b6b6b",
+    "type": "teachers",
+    "title": "Teachers",
+    "content": ""
   }
 
 }}
