--- a/templates/syllabus_button.mustache
+++ b/templates/syllabus_button.mustache
@@ -21,7 +21,7 @@
 
     Example context (json):
     {
-        "url: "http://xxxyy?id=1"
+        "url": "http://moodlesite/course/view.php?id=1"
     }
 }}
 <div id="syllabus-button-{{uniqid}}" class="text-right">
