--- a/templates/language_switcher.mustache
+++ b/templates/language_switcher.mustache
@@ -21,17 +21,33 @@
 
     Example context (json):
     {
-        "languages": [
+        "name": "curlang",
+        "method": "get",
+        "action": "https:\/\/moodle.org\/",
+        "classes": "singleselect",
+        "label": "<img class=\"icon \" alt=\"Langage\" title=\"Langage\" src=\"https:\/\/moodle.org\/\">",
+        "disabled": false,
+        "title": null,
+        "formid": "single_select_f6514f0ba34c9017",
+        "id": "single_select6514f0ba34c9018",
+        "attributes": [],
+        "params": [],
+        "options": [
             {
-                "id": "en",
-                "name": "English"
+                "value": "fra",
+                "name": "Fran\u00e7ais",
+                "selected": false,
+                "optgroup": false
             },
             {
-                "id": "es",
-                "name": "Español"
+                "value": "en",
+                "name": "Anglais",
+                "selected": false,
+                "optgroup": false
             }
         ],
-        "currentlang": "en"
+        "labelattributes": [],
+        "helpicon": false
     }
 }}
 <div class="local-envasyllabus-language-switcher container d-inline-block mx-3">
