--- a/templates/catalog_course.mustache
+++ b/templates/catalog_course.mustache
@@ -53,10 +53,12 @@
                                             </span>
                     <span class="font-weight-bold">
                         {{{displayname}}}
-                        <a type="button" data-toggle="popover" data-placement="top" class="course-info-popover"
+                        <a data-toggle="popover" data-placement="top" class="course-info-popover"
                            title="{{#str}}course:summary, local_envasyllabus{{/str}}"
                            data-content="{{smallsummarytext}}"
                            data-trigger="click hover focus"
+                           href="#"
+                           role="button"
                         >{{#pix}}i/info, core, {{#str}}info{{/str}}{{/pix}}</a>
                     </span>
                     {{^visible}}
