--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
     font-weight: bold;
     font-size: x-large;
 }
-/* Course page */
+
 .local-envasyllabus-course-syllabus .syllabus-header-img {
     max-height: 400px;
     max-width: 450px;
@@ -19,64 +19,45 @@
     line-height: normal;
     width: auto;
 }
-.local-envasyllabus-course-syllabus .graph-header-title {
-    display: none;
-}
+
 .local-envasyllabus-course-syllabus .syllabus-data td {
     border-top: none;
-    padding: 0px 8px;
+    padding: 4px 8px;
 }
+
 .local-envasyllabus-course-syllabus .syllabus-data td.data-value {
     text-align: right;
 }
+
+.local-envasyllabus-course-syllabus .syllabus-data tr.highlighted-top td {
+    font-size: large;
+    font-weight: bolder;
+    padding: 0em 8px 1em;
+}
+
+.local-envasyllabus-course-syllabus .syllabus-data tr.highlighted-bottom td {
+    font-size: large;
+    font-weight: bolder;
+    padding: 1em 8px 0em;
+}
+
 .local-envasyllabus-course-syllabus .syllabus-resp {
     padding: 0.5em 0em 2em;
 }
 
-.local-envasyllabus-course-syllabus .syllabus-data tr.highlighted-top td,
-.local-envasyllabus-course-syllabus .syllabus-data tr.highlighted-bottom td {
-    font-size: large;
-    font-weight: bolder;
-}
-
-.local-envasyllabus-course-syllabus .syllabus-data tr.highlighted-top td {
-    padding: 0em 8px 1em;
-}
-
-.local-envasyllabus-course-syllabus .syllabus-data tr.highlighted-top td {
-    padding: 1em 8px 0em;
-}
-
 .local-envasyllabus-course-syllabus .syllabus-fullname {
-    font-weight: bold;
-    font-size: xx-large;
-    padding-top: 0.75em;
+    font-size: 1.2rem;
+    padding-top: .75em;
 }
 
 .local-envasyllabus-course-syllabus .syllabus-summary {
     margin: 1em auto;
 }
 
-.local-envasyllabus-course-syllabus .syllabus-title .title-caret {
-    display: inline-block;
-    width: 1em;
-    height: 1em;
-    vertical-align: middle;
-    background-image: url([[pix:local_envasyllabus|caret-down]]);
-    background-repeat: no-repeat;
-    background-position: center;
+.local-envasyllabus-course-syllabus .graph-header-title {
+    display: none;
 }
 
-.local-envasyllabus-course-syllabus .syllabus-title.collapsed .title-caret {
-    background-image: url([[pix:local_envasyllabus|caret-right]]);
-    vertical-align: text-top;
-}
-
-@media (max-width: 768px) {
-    .local-envasyllabus-course-syllabus .syllabus-desc-container .competency-inner-container {
-        flex-wrap: wrap-reverse;
-    }
-}
 .local-envasyllabus-course-syllabus .syllabus-desc-container table {
     width: 100%;
     margin-bottom: 20px;
@@ -98,10 +79,6 @@
     display: block;
     width: 100%;
 }
-.syllabus-additional-buttons {
-    float: right;
-    display: flex;
-}
 
 /* Catalog page */
 .local-envasyllabus-ccat .cshortname {
@@ -109,18 +86,13 @@
 }
 
 .local-envasyllabus-ccat .course-card {
-    height: 350px;
+    min-height: 25em;
+    background: #ffffff;
 }
+
 .local-envasyllabus-ccat .course-card .card-img-top {
     height: 200px;
     width: 100%;
-}
-
-.local-envasyllabus-ccat .course-card {
-    min-height: 25em;
-    max-width: 300px;
-    background: #FFFFFF;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .local-envasyllabus-ccat .course-img {
@@ -130,34 +102,4 @@
 .local-envasyllabus-ccat .view-course img {
     width: 1.5em;
     height: 1.5em;
-}
-
-
-/* Fix some issues with lambda theme */
-.local-envasyllabus-ccat .row-fluid [class*="span"]:first-child,
-.local-envasyllabus-ccat .row-fluid [class*="span"],
-.local-envasyllabus-ccat .course-outer-card
-.local-envasyllabus-ccat .course-outer-card:first-child {
-    margin-left: 1em !important;
-    padding-top: 2em;
-}
-
-/* Fix some issues with lambda theme */
-.teachers-container .row [class*="span"]:first-child,
-.teachers-container .row [class*="span"] {
-    margin-left: 1em !important;
-    padding-top: 1em;
-}
-
-.local-envasyllabus-catalog-course .popover-body {
-    text-align: left;
-}
-
-.local-envasyllabus-catalog-course .icon-super-size img,  .local-envasyllabus-catalog-course .view-course-icon{
-    width: 32px;
-    height: 32px;
-}
-
-.local-envasyllabus-catalog-course .view-course-icon a {
-    vertical-align: top;
 }
