--- a/templates/language_switcher.mustache
+++ b/templates/language_switcher.mustache
@@ -50,6 +50,6 @@
         "helpicon": false
     }
 }}
-<div class="local-envasyllabus-language-switcher container d-inline-block mx-3">
+<div class="local-envasyllabus-language-switcher mr-3">
     {{>core/single_select}}
 </div>
