#470 make course name big and purple

--- a/templates/course_syllabus.mustache
+++ b/templates/course_syllabus.mustache
@@ -31,8 +31,7 @@
 
 <div class="local-envasyllabus-course-syllabus">
     <div class="syllabus-title-area my-4">
-        <h1>{{#str}}syllabuspage:title, local_envasyllabus{{/str}}</h1>
-        <div class="syllabus-fullname">{{coursedata.displayname}}</div>
+        <h1 class="syllabus-fullname text-primary">{{coursedata.displayname}}</h1>
         <div class="syllabus-resp text-light">
             {{#str}}syllabuspage:manager, local_envasyllabus{{/str}}: {{{managers}}}
         </div>
