#468 add title Summary before summary section

--- a/templates/course_syllabus.mustache
+++ b/templates/course_syllabus.mustache
@@ -37,6 +37,7 @@
         </div>
     </div>
     {{>local_envasyllabus/course_syllabus_header}}
+    <h3>{{#str}}summary, local_envasyllabus{{/str}}</h3>
     <div class="syllabus-summary">{{{summary}}}</div>
     {{<local_envasyllabus/course_syllabus_collapsible}}
         {{$id}}teachers-{{uniqid}}{{/id}}
