--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,10 @@
 }
 
 .local-envasyllabus-course-syllabus .syllabus-header-img {
-    max-height: 400px;
-    max-width: 450px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 300px;
 }
 
 .local-envasyllabus-course-syllabus .syllabus-data {
