--- a/templates/course_syllabus.mustache
+++ b/templates/course_syllabus.mustache
@@ -31,6 +31,7 @@
 
 <div class="local-envasyllabus-course-syllabus">
     <div class="syllabus-title-area my-4">
+        <div class="mb-2">{{#str}}syllabuspage:title, local_envasyllabus{{/str}}</div>
         <h1 class="syllabus-fullname text-primary">{{coursedata.displayname}}</h1>
         <div class="syllabus-resp text-light">
             {{#str}}syllabuspage:manager, local_envasyllabus{{/str}}: {{{managers}}}
@@ -44,7 +45,7 @@
         {{$type}}teachers{{/type}}
         {{$title}}{{#str}}syllabuspage:teachers, local_envasyllabus{{/str}}{{/title}}
         {{$content}}
-            <div class="d-flex">
+            <div class="d-flex flex-wrap">
                 {{#teachers}}
                     <div class="media teacherbox">
                         {{#userpicture}}
